# Cross-device-CPU-GPU-transaction-processing

./: CMakeCache.txt  CMakeLists.txt  Hero  Makefile  README.md  cmake_install.cmake  globals.cpp  globals.hpp  headers.hpp  init.hpp  main.cpp  utilities.hpp
TPCH/: TPCH.hpp  initialize.hpp  tpch_globals.cpp  tpch_globals.hpp
TPCH/common/runtime/: Import.cpp  Mmap.hpp  String.cpp
cpp_layer/: cpp_globals.cpp  cpp_globals.hpp  data_interface.hpp  environment.hpp  execution_interface.hpp  initialize.hpp
cpp_layer/operations/: primitives.cpp  primitives.hpp
cpp_layer/tests/: test_cpp_execution.cpp  test_cpp_execution.hpp
data/tpch/sf1/cached/: customer_c_comment  part_p_brand  part_p_container  region_r_comment  supplier_s_name
document/: Doxyfile  hash diagram.pages
kernels/: arith_mul.cl  arith_sum.cl  hashBuild.cl  hashProbe.cl  logical_block_or.cl  materialize.cl  ordered_aggregate_count_block.cl  ordered_aggregate_sum_block.cl  partial_prefix_sum.cl  selection_between_block.cl  selection_greater_than_block.cl
mapper-additional/: data_parallelism.h  logical_block_and.cl  selection_block_greater_than.cl  selection_block_less_than.cl
opencl_layer/: data_interface.hpp  environment.hpp  execution_interface.hpp  initialize.hpp  kernel_interface.hpp  openCL_globals.cpp  openCL_globals.hpp
opencl_layer/classes/: devices.cpp  devices.hpp  platforms.cpp  platforms.hpp
opencl_layer/tests/: test_openCL_execution.cpp  test_openCL_execution.hpp
runtime_layer/: initialize.hpp  runtime_globals.cpp  runtime_globals.hpp
runtime_layer/classes/: primitive_graph.cpp  primitive_graph.hpp  primitive_node.cpp  primitive_node.hpp
runtime_layer/morsel_driven/: exchange.cpp  exchange.hpp
runtime_layer/tests/: test_exchange_graph.cpp  test_exchange_graph.hpp  test_graph.cpp  test_graph.hpp
runtime_layer/tests/tpch_queries/: query1.cpp  query1.hpp  query6.cpp  query6.hpp  queryHashJoin.cpp  queryHashJoin.hpp
src/: hashArray.cpp  hashing.cpp
src/include/: hashing.hpp
task_layer/: initialize.hpp  task_globals.cpp  task_globals.hpp
task_layer/classes/: data_pack.cpp  data_pack.hpp  kernel_pack.cpp  kernel_pack.hpp  task.cpp  task.hpp
task_layer/tests/: test_task_execution.cpp  test_task_execution.hpp
